cot/tests/ui/unimplemented_db_model.stderr
error[E0277]: `TodoItem` is not marked as a database model
 --> tests/ui/unimplemented_db_model.rs:6:14
  |
6 |     let _ = <TodoItem as Model>::objects();
  |              ^^^^^^^^ `TodoItem` is not annotated with `#[cot::db::model]`
  |
help: the trait `cot::db::Model` is not implemented for `TodoItem`
 --> tests/ui/unimplemented_db_model.rs:3:1
  |
3 | struct TodoItem {}
  | ^^^^^^^^^^^^^^^
  = note: annotate `TodoItem` with the `#[cot::db::model]` attribute
help: the following other types implement trait `cot::db::Model`
 --> src/session/db.rs
  |
  | #[model]
  | ^^^^^^^^ `cot::session::db::Session`
  |
 ::: src/auth/db.rs
  |
  | #[model]
  | ^^^^^^^^ `DatabaseUser`
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
